--- a/css/styles.css
+++ b/css/styles.css
@@ -394,8 +394,7 @@ gap: 24px;
 }
 
 .team-name-container{
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 16px;
 }
 
 
@@ -411,6 +410,34 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     color: var(--SLATE);
     text-align: center;
+}
+
+.team-list-icons{
+    display: flex;
+    gap: 24px;
+}
+
+.team-icons{
+width: 40px;
+height: 40px;
+}
+.team-icons-link{
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: #4D5AE5;
+    width: 100%;
+    height: 100%;
+}
+
+.team-icons-link:hover,
+.team-icons-link:focus{
+ background-color: #404BBF;
+}
+
+.svg-team{
+    fill: var(--CLOUD);
 }
 /*< !-- Footer-->*/
 
