--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ gap: 40px;
     display: block;
 padding-top: 24px;
 padding-bottom: 24px;
-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list-link:hover
 .header-list-link:focus {
@@ -449,6 +449,7 @@ margin-bottom: 8px;
     display: flex;
     justify-content: center;
     gap: 24px;
+   
 }
 
 .team-icons{
@@ -464,6 +465,7 @@ height: 40px;
     background-color: #4D5AE5;
     width: 100%;
     height: 100%;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icons-link:hover,
@@ -483,7 +485,7 @@ height: 40px;
 }
 
 .customers-title {
-    color: var(--primery-text-color);
+    color: var(--NAVY-BLUE);
     text-align: center;
     font-size: 36px;
     font-weight: 700;
@@ -514,11 +516,11 @@ height: 40px;
     align-items: center;
     transition: border-color var(--duration) var(--timing-function),
         color var(--duration) var(--timing-function);
-    color: var(--fill-customer-color);
+    color: #8e8f99;
 }
 
 .customers-icons {
-    fill: #8e8f99;
+    fill: currentColor;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -607,7 +609,9 @@ padding: 100px 0;
     color: var(--background-color);
     border: 1px solid transparent;
     text-align: center;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .navigation-socials-portfolio {
@@ -649,3 +653,74 @@ font-weight: 400;
 color: var(--SLATE);
 }
 
+/* MODAL */
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    transition: opacity var(--duration) var(--timing-function),
+    visibility var(--duration) var(--timing-function);
+}
+
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    border-radius: 4px;
+    background: #fcfcfc;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--duration) var(--timing-function);
+}
+
+.modal-button {
+    width: 24px;
+        height: 24px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: #e7e9fc;
+        border-radius: 50%;
+        cursor: pointer;
+        fill: var(--modal-background);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        padding: 0;
+        transition: background-color var(--duration) var(--timing-function),
+        border var(--duration) var(--timing-function);
+}
+
+.modal-button-icon {
+    fill: currentColor;
+    transition: fill var(--duration) var(--timing-function);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+    border: none;
+    background-color: var(--OCEAN);
+    color: var(--background-color);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: scale(0);
+}
