--- a/css/styles.css
+++ b/css/styles.css
@@ -542,7 +542,8 @@ height: 40px;
 background-color: var(--NAVY-BLUE) ;
 padding: 100px 0;
 }
-.footer-text-container{
+.footer-container-logo {
+    margin-right: 120px;
 }
 .footer-logo {
     display: inline-block;
@@ -556,8 +557,7 @@ padding: 100px 0;
         
     color: var(--IRIS);
     text-decoration: none;
- 
-     
+    
 }
 
 .footer-text {
@@ -569,6 +569,30 @@ padding: 100px 0;
 .footer-span {
     color: var(--CLOUD);
 }
+
+.footer-container-social-media {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+
+.footer-social-links {
+    border-radius: 50%;
+    background-color: var(--IRIS);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transition: background-color var(--duration) var(--timing-function);
+}
+
+.footer-social-links:hover,
+.footer-social-links:focus {
+    background-color: #31d0aa;
+}
+
 /* PORTFOLIO*/
 
 .portfolio-section{
