--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,6 @@ gap: 40px;
     display: block;
 padding-top: 24px;
 padding-bottom: 24px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list-link:hover
 .header-list-link:focus {
@@ -202,7 +201,7 @@ gap: 40px;
 
 .header-address-list{
 display: inline-flex;
-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -220,6 +219,7 @@ color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--SLATE);
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 .contact:hover,
@@ -251,9 +251,9 @@ color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-bottom: 188px;
     display: flex;
     background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-     rgba(46, 47, 66, 0.7)), 
-     url(../images/peopleoffice.jpg);
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), 
+    url(../images/peopleoffice.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -542,9 +542,16 @@ height: 40px;
 background-color: var(--NAVY-BLUE) ;
 padding: 100px 0;
 }
+
+.footer-text-container{
+display: flex;
+align-items: baseline;
+}
+
 .footer-container-logo {
     margin-right: 120px;
 }
+
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -576,6 +583,24 @@ padding: 100px 0;
     gap: 16px;
 }
 
+.footer-subtitle{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--background-color);
+margin-bottom: 16px;
+}
+
+.footer-social-links-container{
+    display: flex;
+    gap: 16px;
+}
+
+.social-links-items-container{
+width: 40px;
+height: 40px;
+}
 
 .footer-social-links {
     border-radius: 50%;
@@ -585,12 +610,16 @@ padding: 100px 0;
     align-items: center;
     width: 100%;
     height: 100%;
-    transition: background-color var(--duration) var(--timing-function);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-links:hover,
 .footer-social-links:focus {
     background-color: #31d0aa;
+}
+
+.social-icons{
+    fill: var(--CLOUD);
 }
 
 /* PORTFOLIO*/
@@ -723,7 +752,7 @@ color: var(--SLATE);
         top: 24px;
         right: 24px;
         padding: 0;
-        transition: background-color var(--duration) var(--timing-function),
+        transition: background-color var(--NAVY-BLUE) cubic-bezier(0.4, 0, 0.2, 1),
         border var(--duration) var(--timing-function);
 }
 
