--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,10 @@ height: 40px;
     padding: 12px 24px;
     border: 1px solid #e7e9fc;
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-button:hover,
@@ -664,7 +668,7 @@ height: 40px;
     background-color: #404BBF;
     color: var(--background-color);
     border: 1px solid transparent;
-    text-align: center;
+    text-align: center;  
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 2px 1px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -684,11 +688,12 @@ height: 40px;
     background: var(--background-color);
 }
     
-.item:hover,
-.item:focus {
+.portfolio-list:hover,
+.portfolio-list:focus {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
 }
 
 
@@ -702,16 +707,16 @@ border-top: none;
 
 .portfolio-list-link{
 display: block;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transform: translatey(0%);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-list-link:hover .overlay,
 .portfolio-list-link:focus .overlay {
-    transform: translatey(0%);
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-title {
@@ -731,6 +736,34 @@ font-weight: 400;
 color: var(--SLATE);
 }
 
+.portfolio-list-box {
+    position: relative;
+    overflow: hidden;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--IRIS);
+    transform: translatey(100%);
+    transition: transform var(--duration) var(--timing-function);
+    color: var(--CLOUD);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+}
+
+.portfolio-list-link:hover .overlay,
+.portfolio-list-link:focus .overlay {
+    transform: translatey(0%);
+}
+
+.overlay-text {
+    color: var(--CLOUD);
+}
 /* MODAL */
 .backdrop{
     position: fixed;
