--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,7 @@ height: 40px;
     align-items: center;
     width: 100%;
     height: 100%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-links:hover,
@@ -669,9 +669,9 @@ height: 40px;
     color: var(--background-color);
     border: 1px solid transparent;
     text-align: center;  
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 2px 1px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-socials-ul {
@@ -684,15 +684,14 @@ height: 40px;
 
 .portfolio-list {
     width: calc((100% - 48px) / 3);
-    border: 1px solid var(--CLOUD);
     background: var(--background-color);
 }
     
 .portfolio-list:hover,
 .portfolio-list:focus {
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+ 0px 1px 1px rgba(46, 47, 66, 0.16),
+  0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
 
@@ -747,7 +746,7 @@ color: var(--SLATE);
     width: 100%;
     height: 100%;
     background-color: var(--IRIS);
-    transform: translatey(100%);
+    transform: translateY(100%);
     transition: transform var(--duration) var(--timing-function);
     color: var(--CLOUD);
     font-size: 16px;
@@ -758,7 +757,7 @@ color: var(--SLATE);
 
 .portfolio-list-link:hover .overlay,
 .portfolio-list-link:focus .overlay {
-    transform: translatey(0%);
+transform: translateY(0%);
 }
 
 .overlay-text {
