--- a/css/styles.css
+++ b/css/styles.css
@@ -669,7 +669,7 @@ height: 40px;
     color: var(--background-color);
     border: 1px solid transparent;
     text-align: center;  
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+transition:   box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -689,9 +689,9 @@ height: 40px;
     
 .portfolio-list:hover,
 .portfolio-list:focus {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
- 0px 1px 1px rgba(46, 47, 66, 0.16),
-  0px 2px 1px rgba(46, 47, 66, 0.08);
+transition: box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
+0px 1px 1px rgba(46, 47, 66, 0.16),
+0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
 
