--- a/css/styles.css
+++ b/css/styles.css
@@ -669,9 +669,10 @@ height: 40px;
     color: var(--background-color);
     border: 1px solid transparent;
     text-align: center;  
-transition:   box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+box-shadow: 
+        0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 2px 1px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-socials-ul {
@@ -689,7 +690,7 @@ transition:   box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
     
 .portfolio-list:hover,
 .portfolio-list:focus {
-transition: box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 0px 1px 1px rgba(46, 47, 66, 0.16),
 0px 2px 1px rgba(46, 47, 66, 0.08);
 
@@ -700,8 +701,6 @@ transition: box-shadow 0px 1px 6px rgba(46, 47, 66, 0.08),
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
 border-top: none;
-
-
 }
 
 .portfolio-list-link{
