--- a/css/styles.css
+++ b/css/styles.css
@@ -671,8 +671,8 @@ height: 40px;
     text-align: center;  
 box-shadow: 
         0px 3px 1px rgba(0, 0, 0, 0.1),
-            0px 2px 1px rgba(0, 0, 0, 0.08),
-            0px 2px 2px rgba(0, 0, 0, 0.12);
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-socials-ul {
@@ -690,7 +690,8 @@ box-shadow:
     
 .portfolio-list:hover,
 .portfolio-list:focus {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+box-shadow: 
+0px 1px 6px rgba(46, 47, 66, 0.08),
 0px 1px 1px rgba(46, 47, 66, 0.16),
 0px 2px 1px rgba(46, 47, 66, 0.08);
 
@@ -706,15 +707,20 @@ border-top: none;
 .portfolio-list-link{
 display: block;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+box-shadow:
+    0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translatey(0%)
 }
 
 .portfolio-list-link:hover .overlay,
 .portfolio-list-link:focus .overlay {
     transform: translateY(0%);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow:
+    0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-title {
